next
----
-pipeline templates now included in installer
-bug 2561858: added mummer and mumsgraph components to installer
-ber_blast_hit_selector: will now accept gzipped input fsa files
-train_for_glimmer3_iteration: now checks the first line of the --input_fsa_list to see if it's a file
-berbtab2bsml: fixed bug where empty btab files would create polypeptide sequence element instead of CDS
-added load_ber_for_manatee component
-added LDAP and ActiveDirectory authentication
-genewise2bsml.pl: Changed CDS class names going into bsml from 'cds' to 'CDS'
-prok_pipeline: fixed typo of lipoprotein -> Lipoprotein for parse_evidence.lipoprotein $;EVIDENCE_TYPE$; in template
-prok_pipeline: removed hmmpfam RFAM config and also fixed consistency in config files with current release
-parse_evidence and p_func: added to correct section of the install file (previously only in _last section)
-added bsml_qc component
-added overlap_analysis component
-added lipop component
-added blast2go component
-fixed multiple bugs to the p_func component
-added bsml2interevidence_fasta component
-bugfixes to lipop component
-added overlap_analyis, lipop (and pfunc parsing), interevidence search to Prok Pipeline

ergatis-v2r10b1
---------------
-changes to some C source to support GCC 4.3
-genewise: gave each prepare_for_genewise_best_loc its own stdout and stderr; no longer complains about missing protein fasta files when no hits pass the filter.
-bsml2fasta: added option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files
-j_ortholog_clusters: added option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files
-enzyme2obo.pl: added to convert EC -> OBO
-chado2bsml: back to functionality after long neglect - evidence still needs work
-jaccard: added percent coverage cutoff, option (--use_feature_ids_in_fasta) to use polypeptide feature_ids in FASTA files